# tap-apple-search-ads

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  pyproject.toml  sample-config.json  setup.cfg
src/tap_apple_search_ads/: __init__.py  __main__.py  config.py
src/tap_apple_search_ads/api/: __init__.py  campaign.py  campaign_level_reports.py  utils.py
src/tap_apple_search_ads/api/auth/: __init__.py  access_token.py  client_secret.py  request_headers.py  utils.py
src/tap_apple_search_ads/schema/: __init__.py
src/tap_apple_search_ads/schema/from_file/: __init__.py  api.py  facade.py  loader.py  resolver.py
src/tap_apple_search_ads/schemas/: Campaign.CountryOrRegionServingStateReasons.json  Campaign.json  Campaign_Flat.json  ExtendedSpendRow_campaignId.json  ExtendedSpendRow_campaignId_Flat.json  Money.json  Row.json  campaign.json  campaign_flat.json  campaign_level_reports.json  campaign_level_reports_extended_spend_row.json  campaign_level_reports_extended_spend_row_flat.json  currency.json
src/tap_apple_search_ads/schemas/definitions/: Campaign.CountryOrRegionServingStateReasons.json  ExtendedSpendRow.json  LOCInvoiceDetails.json  MetaDataObject.json  Money.json  SpendRow.json
src/tap_apple_search_ads/selectors/: basic.json  reports_selector.json
src/tap_apple_search_ads/stream/: __init__.py  api.py  descriptor.py  metadata.py  stream.py
src/tap_apple_search_ads/stream/concrete/: __init__.py  api.py  base.py  campaign.py  factory.py  (+2 more)
tests/: test_campaign_level_reports_discover.py  test_main.py
tests/schema/from_file/: test_facade.py  test_loader.py  test_resolver.py
tests/stream/: test_metadata.py  test_stream_descriptor.py
tests/stream/concrete/: test_base.py  test_campaign.py  test_campaign_flat.py  test_campaign_level_reports.py  test_descriptor_factory.py
tests/stream/core/: test_metadata.py  test_stream_descriptor.py
(+12 files in other folders)
