[metadata]
name = tap-apple-search-ads
version = 0.0

[options]
packages =
    tap_apple_search_ads
package_dir =
    =src
install_requires =
    cryptography
    pyjwt
    python-dotenv
    pytz
    requests
    singer-python

[options.package_data]
tap_apple_search_ads = py.typed

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pre-commit
    types-pytz
    types-requests
test =
    pytest

[flake8]
max-line-length = 88
