[metadata]
name = tap-apple-search-ads
version = 0.0

[options]
python_required = >= 3.8
packages = find:
package_dir =
    =src
install_requires =
    cryptography
    pyjwt
    python-dotenv
    pytz
    requests
    singer-python

[options.packages.find]
where = src
include = *

[options.entry_points]
console_scripts =
    tap-apple-search-ads = tap_apple_search_ads:main

[options.package_data]
tap_apple_search_ads = py.typed
* = *.json

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pre-commit
    types-pytz
    types-requests
test =
    pytest

[flake8]
max-line-length = 88
