[metadata]
name = tap-apple-search-ads
version = 0.0

[options]
python_required = >= 3.8
packages = find:
package_dir =
    =src
install_requires =
    cryptography>=37.0.2
    PyJWT>=2.4.0
    python-dotenv>=0.20.0
    pytz>=2022.1
    requests>=2.28.0
    singer-python>=5.12.2

[options.packages.find]
where = src
include = *

[options.entry_points]
console_scripts =
    tap-apple-search-ads = tap_apple_search_ads:main

[options.package_data]
tap_apple_search_ads = py.typed, schemas/*.json

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pre-commit
    types-pytz
    types-requests
    types-setuptools
test =
    pytest

[flake8]
max-line-length = 88
